[package]
authors = ["drakulix"]
edition = "2018"
name = "shipwreck"
version = "0.1.5"

[dependencies]
clap = "2"
tokio = "0.1.18"
failure = "0.1.5"
futures = "0.1"
glob = "0.3"
hyper = "0.14"
hyperlocal = "0.6.0"
log = "^0.4.6"
serde_json = "^1.0.39"
simplelog = "^0.5.3"
tokio-io = "0.1"
uri = "^0.3.0"

[dependencies.linked-hash-map]
features = ["serde_impl"]
version = "0.5.2"

[dependencies.toml]
features = ["preserve_order"]
version = "0.5"

[dependencies.jmespath]
features = ["sync"]
version = "0.2"

[dependencies.serde]
features = ["derive"]
version = "^1.0"
